added discover media endpoints
